--- a/Clash/config/ACL4SSR_Online_Full.ini
+++ b/Clash/config/ACL4SSR_Online_Full.ini
@@ -53,7 +53,7 @@ custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🚀 手动切
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🚀 手动切换2`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
 
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换2`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换2`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
+custom_proxy_group=Ⓜ️ 微软云盘`select`[] 美国节点`[]🇭🇰台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换2`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换2`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
 custom_proxy_group=🎮 游戏下载`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换2`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点
